task_two/juiceapp.yml
apiVersion: v1
kind: Pod
metadata:
 name: juice-app
 namespace: ingress-nginx
spec:
 containers:
 - name: juice-app
   image: bkimminich/juice-shop
   ports:
   - containerPort: 3000
