task_two/juiceappservice.yml
apiVersion: v1
kind: Service
metadata:
 name: juiceapp-service
 namespace: ingress-nginx
spec:
 type: ClusterIP
 ports:
 - targetPort: 3000
   port: 8080
