task_two/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 namespace: ingress-nginx
spec:
 rules:
 - host: "juiceshop.com"
   http:
    paths:
    - pathType: Prefix
      path: "/app"
      backend:
    
       service:

            name: juiceapp-service

            port:

              number: 8080
